After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 774312 - Fails to build due to duplicate EggAsn1xFlags symbol
Fails to build due to duplicate EggAsn1xFlags symbol
Status: RESOLVED FIXED
Product: gcr
Classification: Core
Component: General
git master
Other Mac OS
: Normal normal
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks: 774453
 
 
Reported: 2016-11-12 08:13 UTC by Philip Chimento
Modified: 2019-02-22 11:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
egg-asn1x: Change EggAsn1xFlags to typedef (756 bytes, patch)
2016-11-12 08:14 UTC, Philip Chimento
none Details | Review

Description Philip Chimento 2016-11-12 08:13:41 UTC
CCLD     test-dn
    duplicate symbol _EggAsn1xFlags in:
        ./.libs/libegg.a(libegg_la-egg-asn1x.o)
        ./.libs/libegg.a(libegg_la-egg-dn.o)
    ld: 1 duplicate symbol for architecture x86_64
    clang: error: linker command failed with exit code 1 (use -v to see invocation)
    make[2]: *** [test-dn] Error 1

Looks like this enum should actually be a typedef.
Comment 1 Philip Chimento 2016-11-12 08:14:01 UTC
Created attachment 339680 [details] [review]
egg-asn1x: Change EggAsn1xFlags to typedef

Otherwise, including this header in two translation units later linked
together will fail compilation.
Comment 2 Stef Walter 2016-11-14 10:18:22 UTC
Attachment 339680 [details] pushed as 79b57cd - egg-asn1x: Change EggAsn1xFlags to typedef
Comment 3 Stef Walter 2016-11-14 10:22:30 UTC
Attachment 339680 [details] pushed as 3365e7e - egg-asn1x: Change EggAsn1xFlags to typedef