egg-asn1x: Change EggAsn1xFlags to typedef

Otherwise, including this header in two translation units later linked
together will fail compilation.

https://bugzilla.gnome.org/show_bug.cgi?id=774312